--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button class="hero-btn" type="button">Order Service</button>
       </section>
       <!-- ADVANTAGES -->
-      <section class="advntg">
+      <section class="advntg section">
        <div class="container advntg-container">
           <h2 class="advntg-title-hide">Advantages</h2>
           <ul class="advntg-list">
@@ -127,7 +127,7 @@
       </section>
 
       <!--OUR TEAM-->
-      <section class="team">
+      <section class="team section">
      <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
