--- a/portfolio.html
+++ b/portfolio.html
@@ -57,124 +57,141 @@
         <div class="container">
           <h1 class="smain-title-hidden">buttons</h1>
           <ul class="smain-list">
-            <li class="smain-item-button">
+            <li class="smain-list-item">
               <button class="smain-button" type="button">All</button>
             </li>
-            <li class="smain-item-button">
+            <li class="smain-list-item">
               <button class="smain-button" type="button">Web Site</button>
             </li>
-            <li class="smain-item-button">
+            <li class="smain-list-item">
               <button class="smain-button" type="button">App</button>
             </li>
-            <li class="smain-item-button">
+            <li class="smain-list-item">
               <button class="smain-button" type="button">Design</button>
             </li>
-            <li class="smain-item-button">
+            <li class="smain-list-item">
               <button class="smain-button" type="button">Marketing</button>
             </li>
           </ul>
         </div>
-
         <div class="container smain-container">
           <ul class="smain-list-examples">
             <li class="smain-item">
-              <img
-                class="smain-image"
-                src="./images/portf1.jpg"
-                width="360"
-                height="300"
-                alt="App"
-              />
-              <h3 class="smain-title">Banking App Interface Concept</h3>
-              <p class="smain-p">App</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  src="./images/portf1.jpg"
+                  width="360"
+                  height="300"
+                  alt="App"
+                />
+                <h2 class="smain-title">Banking App Interface Concept</h2>
+                <p class="smain-p">App</p>
+              </div>
             </li>
             <li class="smain-item">
-              <img
-                class="smain-image"
-                width="360"
-                height="300"
-                src="./images/portf2.jpg"
-                alt="Pay app"
-              />
-              <h3 class="smain-title">Cashless Payment</h3>
-              <p class="smain-p">Marketing</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  width="360"
+                  height="300"
+                  src="./images/portf2.jpg"
+                  alt="Pay app"
+                />
+                <h2 class="smain-title">Cashless Payment</h2>
+                <p class="smain-p">Marketing</p>
+              </div>
             </li>
             <li class="smain-item">
-              <img
-                class="smain-image"
-                src="./images/portf3.jpg"
-                width="360"
-                height="300"
-                alt="laptop and smarphone with app"
-              />
-              <h3 class="smain-title">Meditaion App</h3>
-              <p class="smain-p">App</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  src="./images/portf3.jpg"
+                  width="360"
+                  height="300"
+                  alt="laptop and smarphone with app"
+                />
+                <h2 class="smain-title">Meditaion App</h2>
+                <p class="smain-p">App</p>
+              </div>
             </li>
             <li class="smain-item">
-              <img
-                class="smain-image"
-                src="./images/portf4.jpg"
-                width="360"
-                height="300"
-                alt="Taxi app in taxi"
-              />
-              <h3 class="smain-title">Taxi Service</h3>
-              <p class="smain-p">Marketing</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  src="./images/portf4.jpg"
+                  width="360"
+                  height="300"
+                  alt="Taxi app in taxi"
+                />
+                <h2 class="smain-title">Taxi Service</h2>
+                <p class="smain-p">Marketing</p>
+              </div>
             </li>
             <li class="smain-item">
-              <img
-                class="smain-image"
-                src="./images/portf5.jpg"
-                width="360"
-                height="300"
-                alt="Screen illustrations"
-              />
-              <h3 class="smain-title">Screen Illustrations</h3>
-              <p class="smain-p">Design</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  src="./images/portf5.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen illustrations"
+                />
+                <h2 class="smain-title">Screen Illustrations</h2>
+                <p class="smain-p">Design</p>
+              </div>
             </li>
             <li class="smain-item">
-              <img
-                class="smain-image"
-                src="./images/portf6.jpg"
-                width="360"
-                height="300"
-                alt="Woman with mobile"
-              />
-              <h3 class="smain-title">Online Courses</h3>
-              <p class="smain-p">Marketing</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  src="./images/portf6.jpg"
+                  width="360"
+                  height="300"
+                  alt="Woman with mobile"
+                />
+                <h2 class="smain-title">Online Courses</h2>
+                <p class="smain-p">Marketing</p>
+              </div>
             </li>
             <li class="smain-item">
-              <img
-                class="smain-image"
-                src="./images/portf7.jpg"
-                width="360"
-                height="300"
-                alt="Examples Instagram stories"
-              />
-              <h3 class="smain-title">Instagram Stories Concept</h3>
-              <p class="smain-p">Design</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  src="./images/portf7.jpg"
+                  width="360"
+                  height="300"
+                  alt="Examples Instagram stories"
+                />
+                <h2 class="smain-title">Instagram Stories Concept</h2>
+                <p class="smain-p">Design</p>
+              </div>
             </li>
             <li class="smain-item">
-              <img
-                class="smain-image"
-                src="./images/portf8.jpg"
-                width="360"
-                height="300"
-                alt="Example photo"
-              />
-              <h3 class="smain-title">Organic Food</h3>
-              <p class="smain-p">Web Site</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  src="./images/portf8.jpg"
+                  width="360"
+                  height="300"
+                  alt="Example photo"
+                />
+                <h2 class="smain-title">Organic Food</h2>
+                <p class="smain-p">Web Site</p>
+              </div>
             </li>
             <li class="smain-item">
-              <img
-                class="smain-image"
-                src="./images/portf9.jpg"
-                width="360"
-                height="300"
-                alt="Cup of coffe"
-              />
-              <h3 class="smain-title">Fresh Coffee</h3>
-              <p class="smain-p">Web Site</p>
+              <div class="cards">
+                <img
+                  class="smain-image"
+                  src="./images/portf9.jpg"
+                  width="360"
+                  height="300"
+                  alt="Cup of coffe"
+                />
+                <h2 class="smain-title">Fresh Coffee</h2>
+                <p class="smain-p">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
